--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "ngrok-setup",
+  "name": "api-vercel",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "18.x"
+    "node": "14.x"
   },
   "scripts": {
-    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "ngrok": "^5.0.0-beta.2",
-    "nodemon": "^3.0.1"
+    "express": "^4.18.1"
   }
 }
